# CP2024

./: .ignore  CMakeLists.txt  CanonicalEnsembleTest.cpp  HOE-5.cpp  IsingModel.cpp  IsingModel.hpp  IsingSpin.hpp  IsingSpinOnLatticeTest.cpp  Ising_system.cpp  Ising_system.hpp  ModelTest.cpp  README.md  SpinLattice.hpp  SquareSystem.hpp  SquareSystemTest.cpp  SystemTest.cpp  fibonacci.cpp  main.cpp  test.cpp  unittest.yml
.github/workflows/: unittest.yml
HOE-5/: data_2.txt  data_3.txt  data_4.txt  data_5.txt  script.m
